--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 						<li><i class="fa fa-facebook"></i></li>
 						<li><i class="fa fa-twitter"></i></li>
 						<li><i class="fa fa-linkedin"></i></li>
-						<li><i class="fa fa-youtube"></i></li>
+						<li><i class="fa fa-youtube"></i></li><li><i class="fa fa-facebook"></i></li>
+						<li><i class="fa fa-instagram"></i></li>
+						<li><i class="fa fa-skype"></i></li>						
 						<li><i class="fa fa-facebook-square"></i></li>
 						
 					</ul>				
